Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bank-leumi-app-service
spec:
  type: LoadBalancer 
  ports:
    - port: 443      # Port the LoadBalancer will expose
      targetPort: 5000  # The port inside the pod 
  selector:
    app: bank-leumi-app
